--- a/.eslintrc
+++ b/.eslintrc
@@ -19,29 +19,12 @@
   },
   "rules": {
     // Strict mode
-    "strict": [
-      2,
-      "never"
-    ],
+    "strict": [2, "never"],
     // Code style
-    "quotes": [
-      2,
-      "single"
-    ],
-    "jsx-quotes": [
-      2,
-      "prefer-double"
-    ],
-    "object-shorthand": [
-      2,
-      "always"
-    ],
-    "arrow-parens": [
-      2,
-      "as-needed"
-    ],
-    "no-var": [
-      2
-    ]
+    "quotes": [2, "single"],
+    "jsx-quotes": [2, "prefer-double"],
+    "object-shorthand": [2, "always"],
+    "arrow-parens": [2, "as-needed"],
+    "no-var": [2]
   }
 }
