--- a/package.json
+++ b/package.json
@@ -26,8 +26,14 @@
     "eslint-friendly-formatter": "^1.2.2",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^3.1.0",
+    "express": "^4.13.3",
+    "babel-plugin-react-transform": "^1.1.1",
+    "react-transform-hmr": "^1.0.1",
+    "react-transform-catch-errors": "^1.0.0",
+    "redbox-react": "^1.0.1",
     "webpack": "^1.9.6",
-    "webpack-dev-server": "^1.8.2"
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.0.0"
   },
   "dependencies": {
     "whatwg-fetch": "^0.9.0"
