--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "web-fetch-request",
+  "name": "es6-utils",
   "version": "1.2.3",
-  "description": "a web request module build with fetch api & es6,without any other dependencies",
+  "description": "provide some common utils like http request,cache and so on,written by pure ES6",
   "main": "lib/index.js",
   "scripts": {
     "build:lib": "babel src --out-dir lib",
@@ -11,10 +11,10 @@
   },
   "keywords": [
     "es6",
-    "utils",
     "fetch api",
-    "ajax",
-    "rest"
+    "rest",
+    "utils",
+    "ajax"
   ],
   "author": "Kuitos",
   "license": "MIT",
