--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "provide some common utils like http request,cache and so on,written by pure ES6",
   "main": "lib/index.js",
   "scripts": {
-    "build:lib": "babel src --out-dir lib",
+    "build:lib": "NODE_ENV=production babel src --out-dir lib --ignore **/__tests",
     "build:dist": "webpack --config webpack-build.config.js --progress --profile --colors",
     "dev": "json-mock-kuitos src/mock/db.json -s / -p 8080 & node server.js",
-    "start": "json-mock-kuitos src/mock/db.json -s / -p 8080 & node server.js"
+    "codecheck": "NODE_ENV=test eslint src/**/*.js",
+    "precommit": "npm run codecheck",
+    "prepush": "npm run codecheck",
+    "start": "json-mock-kuitos src/mock/db.json -s / -p 8080 & node server.js",
+    "test": "BABEL_JEST_STAGE=0 jest --verbose --watch"
   },
   "keywords": [
     "es6",
@@ -21,19 +25,41 @@
   "devDependencies": {
     "babel-core": "^5.4.7",
     "babel-eslint": "^4.0.5",
+    "babel-jest": "^5.3.0",
     "babel-loader": "^5.1.2",
+    "babel-plugin-react-transform": "^1.1.1",
     "eslint": "^1.6.0",
     "eslint-friendly-formatter": "^1.2.2",
     "eslint-loader": "^1.1.0",
     "eslint-plugin-react": "^3.1.0",
     "express": "^4.13.3",
-    "babel-plugin-react-transform": "^1.1.1",
-    "react-transform-hmr": "^1.0.1",
+    "husky": "^0.10.1",
+    "jest-cli": "^0.6.1",
     "react-transform-catch-errors": "^1.0.0",
+    "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.0.1",
-    "webpack": "^1.9.6",
+    "webpack": "^1.11.0",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.0.0"
+  },
+  "jest": {
+    "modulePathIgnorePatterns": [
+      "/lib/",
+      "/node_modules/"
+    ],
+    "persistModuleRegistryBetweenSpecs": true,
+    "preprocessorIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "rootDir": "",
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "testPathDirs": [
+      "<rootDir>/src"
+    ],
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/",
+      "<rootDir>/src/"
+    ]
   },
   "dependencies": {
     "whatwg-fetch": "^0.10.0"
