--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "es6-utils",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "description": "provide some common utils like http request,cache and so on,written by pure ES6",
   "main": "lib/index.js",
   "scripts": {
+    "build:deploy":"npm run build:lib & npm run build:dist",
     "build:lib": "NODE_ENV=production babel src --out-dir lib --ignore **/__tests",
     "build:dist": "webpack --config webpack-build.config.js --progress --profile --colors",
     "dev": "json-mock-kuitos src/mock/db.json -s / -p 8081 & node server.js",
