--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:lib": "NODE_ENV=production babel src --out-dir lib --ignore **/__tests",
     "build:dist": "webpack --config webpack-build.config.js --progress --profile --colors",
     "dev": "json-mock-kuitos src/mock/db.json -s / -p 8081 & node server.js",
-    "codecheck": "NODE_ENV=test eslint src/**/*.js",
+    "codecheck": "NODE_ENV=test eslint src/**",
     "precommit": "npm run codecheck",
     "start": "json-mock-kuitos src/mock/db.json -s / -p 8081 & node server.js",
     "test": "BABEL_JEST_STAGE=0 jest --config .jestrc --verbose --watch"
