--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "es6-utils",
-  "version": "1.2.15",
+  "version": "1.2.17",
   "description": "provide some common utils like http request,cache and so on,written by pure ES6",
   "main": "lib/index.js",
   "scripts": {
-    "build:deploy":"npm run build:lib & npm run build:dist",
+    "build:deploy": "npm run build:lib & npm run build:dist",
     "build:lib": "NODE_ENV=production babel src --out-dir lib --ignore **/__tests",
     "build:dist": "webpack --config webpack-build.config.js --progress --profile --colors",
     "dev": "json-mock-kuitos src/mock/db.json -s / -p 8081 & node server.js",
     "codecheck": "NODE_ENV=test eslint src/**",
     "precommit": "npm run codecheck",
+    "prepush": "npm run build:deploy",
     "start": "json-mock-kuitos src/mock/db.json -s / -p 8081 & node server.js",
     "test": "BABEL_JEST_STAGE=0 jest --config .jestrc --verbose --watch"
   },
