--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "es6-utils",
-  "version": "1.2.24",
-  "description": "provide some common utils like http request,cache and so on,written by pure ES6",
+  "name": "es6-http-utils",
+  "version": "2.0.0",
+  "description": "provide some http utils,such as http request,cache and so on,written by pure ES6",
   "main": "lib/index.js",
   "scripts": {
 	"build": "npm run build:lib & npm run build:dist",
