--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 node_modules
+dist
+lib
 .idea
 bower_components
