--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
   "name": "es6-http-utils",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "provide some http utils,such as http request,cache and so on,written by pure ES6",
-  "main": "lib/index.js",
+  "main": "./index.js",
   "scripts": {
-	"build": "npm run build:lib & npm run build:dist",
-	"build:lib": "NODE_ENV=production babel src --out-dir lib --ignore **/__tests__ && git add lib",
-	"build:dist": "webpack --config webpack-build.config.js --progress --profile --colors && git add dist",
-	"dev": "json-mock-kuitos src/mock/db.json -s / -p 8081 & node server.js",
-	"codecheck": "NODE_ENV=test eslint src/**",
-	"start": "json-mock-kuitos src/mock/db.json -s / -p 8081 & node server.js",
-	"test": "BABEL_JEST_STAGE=0 jest --config .jestrc --verbose --watch"
+    "build": "NODE_ENV=production babel src --out-dir lib --ignore **/__tests__ && cp package.json lib/package.json",
+    "pub": "npm run build && npm publish lib && cnpm sync es6-http-utils",
+    "dev": "json-mock-kuitos src/mock/db.json -s / -p 8081 & node server.js",
+    "codecheck": "NODE_ENV=test eslint src/**",
+    "start": "json-mock-kuitos src/mock/db.json -s / -p 8081 & node server.js",
+    "test": "BABEL_JEST_STAGE=0 jest --config .jestrc --verbose --watch"
   },
   "keywords": [
-	"es6",
-	"fetch api",
-	"rest",
-	"utils",
-	"ajax"
+    "es6",
+    "fetch api",
+    "rest",
+    "utils",
+    "ajax"
   ],
   "author": "Kuitos",
   "license": "MIT",
   "devDependencies": {
-	"babel-core": "^5.4.7",
-	"babel-eslint": "^4.0.5",
-	"babel-jest": "^5.3.0",
-	"babel-loader": "^5.1.2",
-	"clean-webpack-plugin": "^0.1.6",
-	"eslint": "^1.6.0",
-	"eslint-friendly-formatter": "^1.2.2",
-	"eslint-loader": "^1.1.0",
-	"eslint-plugin-standard": "^1.3.1",
-	"express": "^4.13.3",
-	"husky": "^0.10.1",
-	"jest-cli": "^0.8.1",
-	"webpack": "^1.11.0",
-	"webpack-dev-middleware": "^1.2.0",
-	"webpack-hot-middleware": "^2.0.0"
+    "babel-core": "^6.16.0",
+    "babel-eslint": "^7.0.0",
+    "babel-jest": "^15.0.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "clean-webpack-plugin": "^0.1.10",
+    "eslint": "^3.6.1",
+    "eslint-friendly-formatter": "^2.0.6",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "express": "^4.14.0",
+    "husky": "^0.11.8",
+    "jest-cli": "^15.1.1",
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.8.3",
+    "webpack-hot-middleware": "^2.12.2"
   }
 }
